--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "metapatterns/themes/hugo-book"]
 	path = metapatterns/themes/hugo-book
-	url = https://github.com/alex-shpak/hugo-book
+	url = git@github.com:denyspoltorak/hugo-book.git
