--- a/metapatterns/hugo.toml
+++ b/metapatterns/hugo.toml
@@ -18,6 +18,8 @@ printPathWarnings = true
   BookToC = true
   BookSection = '/'
   BookTheme = 'auto'
+  description = "The Metapatterns website is a compendium and classification of architectural patterns based on the assumption that structure determines function."
+  images = ["/Cover.png"]
 
 [author]
   name = "Denys Poltorak"
