Disable taxonomy and tags

--- a/metapatterns/hugo.toml
+++ b/metapatterns/hugo.toml
@@ -6,6 +6,7 @@ BookComments = false
 
 enableRobotsTXT = true
 printPathWarnings = true
+disableKinds = ['taxonomy', 'term']
 
 [markup]
   [markup.goldmark]
