--- a/metapatterns/hugo.toml
+++ b/metapatterns/hugo.toml
@@ -3,6 +3,7 @@ languageCode = 'en-us'
 title = 'Architectural Metapatterns'
 theme = 'hugo-book'
 BookComments = false
+BookFavicon = 'favicon.png'
 
 enableRobotsTXT = true
 printPathWarnings = true
