--- a/metapatterns/hugo.toml
+++ b/metapatterns/hugo.toml
@@ -19,6 +19,7 @@ disableKinds = ['taxonomy', 'term']
   BookToC = true
   BookSection = '/'
   BookTheme = 'auto'
+  BookLogo = 'favicon.svg'
   description = "The Metapatterns website is a compendium and classification of architectural patterns based on the assumption that structure determines function."
   images = ["/web-app-manifest-512x512.png"]
 
